--- a/app/src/main/res/layout/activity_appbar_layout.xml
+++ b/app/src/main/res/layout/activity_appbar_layout.xml
@@ -28,7 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/angel" />
+                android:src="@drawable/angel"
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
