--- a/app/src/main/res/layout/activity_flag_scroll.xml
+++ b/app/src/main/res/layout/activity_flag_scroll.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.design.widget.CoordinatorLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="50dp"
@@ -44,7 +44,7 @@
             </LinearLayout>
 
 
-        </android.support.design.widget.CoordinatorLayout>
+        </FrameLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
